fixed plan and coupons apis
